guide update for RU